--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "lightence-admin",
-  "version": "1.0.0",
-  "license": "MIT",
+  "name": "medical-admin",
+  "version": "0.0.1",
   "description": "Free and easy-to-use admin template based on React 17+",
-  "repository": {
-    "type": "git",
-    "url": "git+github.com:altence/lightence-admin.git"
-  },
-  "bugs": {
-    "url": "https://github.com/altence/lightence-admin/issues"
-  },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@craco/craco": "^6.1.2",
@@ -128,7 +120,7 @@
   },
   "packageManager": "yarn@3.1.1",
   "keywords": [
-    "lightence",
+    "medical",
     "admin",
     "admin-dashboard",
     "ant-design",
