--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Lightence",
-  "name": "Lightence Admin Template",
+  "short_name": "Medicine",
+  "name": "Medicine Admin Template",
   "icons": [
     {
       "src": "favicon.ico",
